--- a/controllers/build.gradle
+++ b/controllers/build.gradle
@@ -13,21 +13,11 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.39.3.0'
+    implementation(project(":models"))
+    implementation(project(":serializers"))
 }
-
-allprojects{
-    apply plugin: 'java'
-    dependencies {
-        implementation group: 'com.intellij', name: 'annotations', version: '12.0'
-    }
-}
-
 
 test {
     useJUnitPlatform()
 }
-
-application {
-    mainClass = 'org.my_games_java_course.controllers.App'
-}
-
