--- a/models/build.gradle
+++ b/models/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'java'
-    id 'application'
 }
 
 group 'org.my_games_java_course'
@@ -13,21 +12,13 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
-}
 
-allprojects{
-    apply plugin: 'java'
-    dependencies {
-        implementation group: 'com.intellij', name: 'annotations', version: '12.0'
-    }
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+    testCompileOnly 'org.projectlombok:lombok:1.18.24'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
-
 
 test {
     useJUnitPlatform()
 }
-
-application {
-    mainClass = 'org.my_games_java_course.controllers.App'
-}
-
