--- a/serializers/build.gradle
+++ b/serializers/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'java'
-    id 'application'
 }
 
 group 'org.my_games_java_course'
@@ -13,21 +12,10 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    implementation 'com.google.code.gson:gson:2.9.1'
+    implementation(project(":models"))
 }
-
-allprojects{
-    apply plugin: 'java'
-    dependencies {
-        implementation group: 'com.intellij', name: 'annotations', version: '12.0'
-    }
-}
-
 
 test {
     useJUnitPlatform()
 }
-
-application {
-    mainClass = 'org.my_games_java_course.controllers.App'
-}
-
